--- a/posts/2023-04-27-mdx-syntax-admonitions.mdx
+++ b/posts/2023-04-27-mdx-syntax-admonitions.mdx
@@ -3,6 +3,12 @@ title: MDX Syntax - Admonitions
 date: '2023-04-26T16:00:03.000Z'
 tags:
   - MDX
+  - 技术
+  - JS
+  - CSS
+  - React
+  - Next
+  - 工作
 ---
 
 ## Tip
