feat: add code block highlight transformers.
- follow @shikijs/transformers to added some highlight transformers.

--- a/posts/2023-04-27-mdx-syntax-basic.mdx
+++ b/posts/2023-04-27-mdx-syntax-basic.mdx
@@ -5,12 +5,12 @@ tags:
   - 美食
   - 日常
   - 生活
-abstract: '本来是想要在每一次刷新的时候，自动更换主题。如果是用 vite 或者 parcel，不配置，构建一个 SPA，理论上实现这个过程很简单，只要是一个 Client Component 就会在每次 reload(F5) 的时候触发 Re-render, 而且还是 init-rerender，因此我们只需要准备一个 State，然后给他每次初始化一个随机数就行了。当然如果我们没有改主题的需求，那直接放在 Component 外面也行，就像下面这样。'
+abstract: 'Here is the abstract'
 ---
 
-> 明月几时有？把酒问青天。不知天上宫阙，今夕是何年。我欲乘风归去，又恐琼楼玉宇，高处不胜寒。起舞弄清影，何似在人间。
+> A small major this time, nothing big, which is also nice sometimes! This mainly drops support for old Node (use 16 or later), adds modern ES2024 support in MDX, supports `await` in MDX (if your framework does too), and removes several deprecated options.
 >
-> 转朱阁，低绮户，照无眠。不应有恨，何事长向别时圆？人有悲欢离合，月有阴晴圆缺，此事古难全。但愿人长久，千里共婵娟。
+> lol mdx is so good
 
 ---
 
