--- a/posts/2023-04-27-mdx-syntax-guide.mdx
+++ b/posts/2023-04-27-mdx-syntax-guide.mdx
@@ -7,3 +7,4 @@ draft: false
 ---
 
 - [MDX Syntax - Basic](/posts/2023-04-27-mdx-syntax-basic)
+- [MDX Code Block](/posts/2024-05-28-mdx-code-block.mdx)
